new colours in header and footer - working on other sections

--- a/components/footer.html
+++ b/components/footer.html
@@ -1,4 +1,4 @@
-<footer class="bg-rose-300/80 font-sans border-t border-rose-400">
+<footer class="magenta letters font-sans border-t border-rose-400">
   <div
     class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 py-10 grid grid-cols-1 md:grid-cols-3 gap-8"
   >
@@ -8,23 +8,23 @@
         class="uppercase font-extrabold border-b-4 border-pink-300 w-max pb-1 tracking-wide text-lg"
       >
         Follow Us
-    </h1>
+      </h1>
       <a
-        class="text-white transition duration-300 cursor-pointer font-medium px-2 py-1 rounded hover:bg-rose-600/70"
+        class="transition duration-300 cursor-pointer font-medium px-2 py-1 rounded hover:bg-rose-400/60"
       >
         <span class="inline-block transition-transform hover:translate-x-2">
           <i class="ri-tiktok-fill"></i> TikTok
         </span>
       </a>
       <a
-        class="text-white transition duration-300 cursor-pointer font-medium px-2 py-1 rounded hover:bg-rose-600/70"
+        class="transition duration-300 cursor-pointer font-medium px-2 py-1 rounded hover:bg-rose-400/60"
       >
         <span class="inline-block transition-transform hover:translate-x-2">
           <i class="ri-twitter-x-fill"></i> Twitter
         </span>
       </a>
       <a
-        class="text-white transition duration-300 cursor-pointer font-medium px-2 py-1 rounded hover:bg-rose-600/70"
+        class="transition duration-300 cursor-pointer font-medium px-2 py-1 rounded hover:bg-rose-400/60"
       >
         <span class="inline-block transition-transform hover:translate-x-2">
           <i class="ri-instagram-fill"></i> Instagram
@@ -35,13 +35,13 @@
     <!-- Information -->
     <div class="flex flex-col space-y-2">
       <h2
-        class="uppercase font-extrabold text-rose-200 border-b-4 border-pink-300 w-max pb-1 tracking-wide text-lg"
+        class="uppercase font-extrabold border-b-4 border-pink-300 w-max pb-1 tracking-wide text-lg"
       >
         Information
-    </h2>
+      </h2>
       <a
         href="../pages/about.html"
-        class="text-white transition duration-300 cursor-pointer font-medium px-2 py-1 rounded hover:bg-rose-600/70"
+        class="transition duration-300 cursor-pointer font-medium px-2 py-1 rounded hover:bg-rose-400/60"
       >
         <span class="inline-block transition-transform hover:translate-x-2"
           >About</span
@@ -49,7 +49,7 @@
       </a>
       <a
         href="../pages/contact.html"
-        class="text-white transition duration-300 cursor-pointer font-medium px-2 py-1 rounded hover:bg-rose-600/70"
+        class="transition duration-300 cursor-pointer font-medium px-2 py-1 rounded hover:bg-rose-400/60"
       >
         <span class="inline-block transition-transform hover:translate-x-2"
           >Contact</span
@@ -57,7 +57,7 @@
       </a>
       <a
         href="../pages/faq.html"
-        class="text-white transition duration-300 cursor-pointer font-medium px-2 py-1 rounded hover:bg-rose-600/70"
+        class="transition duration-300 cursor-pointer font-medium px-2 py-1 rounded hover:bg-rose-400/60"
       >
         <span class="inline-block transition-transform hover:translate-x-2"
           >FAQs</span
@@ -68,13 +68,13 @@
     <!-- More Sweetness -->
     <div class="flex flex-col space-y-2">
       <h3
-        class="uppercase font-extrabold text-rose-200 border-b-4 border-pink-300 w-max pb-1 tracking-wide text-lg"
+        class="uppercase font-extrabold border-b-4 border-pink-300 w-max pb-1 tracking-wide text-lg"
       >
         More Sweetness
-    </h3>
+      </h3>
       <a
         href="../pages/events.html"
-        class="text-white transition duration-300 cursor-pointer font-medium px-2 py-1 rounded hover:bg-rose-600/70"
+        class="transition duration-300 cursor-pointer font-medium px-2 py-1 rounded hover:bg-rose-400/60"
       >
         <span class="inline-block transition-transform hover:translate-x-2"
           >Events</span
@@ -82,7 +82,7 @@
       </a>
       <a
         href="../pages/jobs.html"
-        class="text-white transition duration-300 cursor-pointer font-medium px-2 py-1 rounded hover:bg-rose-600/70"
+        class="transition duration-300 cursor-pointer font-medium px-2 py-1 rounded hover:bg-rose-400/60"
       >
         <span class="inline-block transition-transform hover:translate-x-2"
           >Jobs</span
