--- a/components/header.html
+++ b/components/header.html
@@ -58,21 +58,21 @@
         ></span>
       </a>
 
-      <a href="../pages/about.html" class="group relative px-3 py-1">
+      <a href="/pages/about.html" class="group relative px-3 py-1">
         About
         <span
           class="absolute bottom-0 left-0 w-full h-1 bg-rose-400 rounded-full scale-x-0 group-hover:scale-x-100 transition-transform origin-left duration-300"
         ></span>
       </a>
 
-      <a href="../pages/contact.html" class="group relative px-3 py-1">
+      <a href="/pages/contact.html" class="group relative px-3 py-1">
         Contact
         <span
           class="absolute bottom-0 left-0 w-full h-1 bg-rose-400 rounded-full scale-x-0 group-hover:scale-x-100 transition-transform origin-left duration-300"
         ></span>
       </a>
 
-      <a href="../pages/faq.html" class="group relative px-3 py-1">
+      <a href="/pages/faq.html" class="group relative px-3 py-1">
         FAQ
         <span
           class="absolute bottom-0 left-0 w-full h-1 bg-rose-400 rounded-full scale-x-0 group-hover:scale-x-100 transition-transform origin-left duration-300"
@@ -197,37 +197,37 @@
     <!-- Mobile links -->
     <nav class="mt-6 px-6 pb-6 flex flex-col justify-start space-y-3">
       <a
-        href="../index.html"
+        href="/index.html"
         class="block px-3 py-2 font-medium hover:bg-rose-400/60 rounded"
         @click="open = false"
         >Home</a
       >
       <a
-        href="../pages/about.html"
+        href="/pages/about.html"
         class="block px-3 py-2 font-medium hover:bg-rose-400/60 rounded"
         @click="open = false"
         >About</a
       >
       <a
-        href="../pages/contact.html"
+        href="/pages/contact.html"
         class="block px-3 py-2 font-medium hover:bg-rose-400/60 rounded"
         @click="open = false"
         >Contact</a
       >
       <a
-        href="../pages/faq.html"
+        href="/pages/faq.html"
         class="block px-3 py-2 font-medium hover:bg-rose-400/60 rounded"
         @click="open = false"
         >FAQ</a
       >
       <a
-        href="../pages/events.html"
+        href="/pages/events.html"
         class="block px-3 py-2 font-medium hover:bg-rose-400/60 rounded"
         @click="open = false"
         >Events</a
       >
       <a
-        href="../pages/jobs.html"
+        href="/pages/jobs.html"
         class="block px-3 py-2 font-medium hover:bg-rose-400/60 rounded"
         @click="open = false"
         >Jobs</a
