changed header and footer links to absolute

--- a/components/footer.html
+++ b/components/footer.html
@@ -40,7 +40,7 @@
         Information
       </h2>
       <a
-        href="./../pages/about.html"
+        href="/pages/about.html"
         class="transition duration-300 cursor-pointer font-medium px-2 py-1 rounded hover:bg-rose-400/60"
       >
         <span class="inline-block transition-transform hover:translate-x-2"
@@ -48,7 +48,7 @@
         >
       </a>
       <a
-        href="./../pages/contact.html"
+        href="/pages/contact.html"
         class="transition duration-300 cursor-pointer font-medium px-2 py-1 rounded hover:bg-rose-400/60"
       >
         <span class="inline-block transition-transform hover:translate-x-2"
@@ -56,7 +56,7 @@
         >
       </a>
       <a
-        href="./../pages/faq.html"
+        href="/pages/faq.html"
         class="transition duration-300 cursor-pointer font-medium px-2 py-1 rounded hover:bg-rose-400/60"
       >
         <span class="inline-block transition-transform hover:translate-x-2"
@@ -73,7 +73,7 @@
         More Sweetness
       </h3>
       <a
-        href="./../pages/events.html"
+        href="/pages/events.html"
         class="transition duration-300 cursor-pointer font-medium px-2 py-1 rounded hover:bg-rose-400/60"
       >
         <span class="inline-block transition-transform hover:translate-x-2"
@@ -81,7 +81,7 @@
         >
       </a>
       <a
-        href="./../pages/jobs.html"
+        href="/pages/jobs.html"
         class="transition duration-300 cursor-pointer font-medium px-2 py-1 rounded hover:bg-rose-400/60"
       >
         <span class="inline-block transition-transform hover:translate-x-2"
