changed home link in header

--- a/components/header.html
+++ b/components/header.html
@@ -51,7 +51,7 @@
 
     <!-- DESKTOP LINKS -->
     <div class="hidden lg:flex items-center gap-8 font-medium letters relative">
-      <a href="/index.html" class="group relative px-3 py-1">
+      <a href="/E-commerce-site/index.html" class="group relative px-3 py-1">
         Home
         <span
           class="absolute bottom-0 left-0 w-full h-1 bg-rose-400 rounded-full scale-x-0 group-hover:scale-x-100 transition-transform origin-left duration-300"
